Fix: word-wrap en títulos de hilos

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
   margin-top: 4em;
 }
 
-.postMessage {
+.postMessage,
+.threadTitle {
   word-break: break-word;
   overflow-wrap: anywhere;
   text-overflow: ellipsis;
